--- a/index.html
+++ b/index.html
@@ -181,28 +181,29 @@
         </div>
     </section>
     <section class="Deloy_Ecommerce_footer">
-        <div class="client" style="width: 25%; margin-left: 100px;">
+        <div class="design" style="width: 5%;"></div>
+        <div class="client" style="width: 18%;">
             <h2>Chăm sóc khách hàng</h2>
             <ul>
                 <li>Trung tâm trợ giúp</li>
                 <li>Hướng dẫn mua hàng</li>
             </ul>
         </div>
-        <div style="width: 25%;">
+        <div style="width: 18%;">
             <h2>Giới thiệu</h2>
             <ul>
                 <li>Điều khoản</li>
                 <li>Điều khoản chính sách</li>
             </ul>
         </div>
-        <div style="width: 25%;">
+        <div style="width: 18%;">
             <h2>Danh mục sản phẩm</h2>
             <ul>
                 <li>Thời trang</li>
                 <li>Đồ tiêu dùng</li>
             </ul>
         </div>
-        <div style="width: 25%;">
+        <div style="width: 18%">
             <h2>Theo dõi chúng tôi</h2>
             <ul>
                 <li><ion-icon name="logo-facebook"></ion-icon>Facebook</li>
@@ -210,12 +211,13 @@
                 <li><ion-icon name="logo-twitter"></ion-icon>Twitter</li>
             </ul>
         </div>
-        <div style="width: 25%;">
+        <div style="width: 18%;">
             <h2>Đội ngũ phát triển</h2>
             <ul>
                 <li>Trịnh Quốc Hai</li>
             </ul>
         </div>
+        <div class="design" style="width: 0%;"></div>
     </section>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
